// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Zhejiang" aria-checked="false" data-path-key="zhejiang">
    <!---->
    <div class="ant-cascader-menu-item-content">Zhejiang</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Jiangsu" aria-checked="false" data-path-key="jiangsu">
    <!---->
    <div class="ant-cascader-menu-item-content">Jiangsu</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Hangzhou" aria-checked="false" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou">
    <!---->
    <div class="ant-cascader-menu-item-content">Hangzhou</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
`;

exports[`Cascader can be selected 2`] = `
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Zhejiang" aria-checked="false" data-path-key="zhejiang">
    <!---->
    <div class="ant-cascader-menu-item-content">Zhejiang</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Jiangsu" aria-checked="false" data-path-key="jiangsu">
    <!---->
    <div class="ant-cascader-menu-item-content">Jiangsu</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Hangzhou" aria-checked="false" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou">
    <!---->
    <div class="ant-cascader-menu-item-content">Hangzhou</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item" role="menuitemcheckbox" title="West Lake" aria-checked="false" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu">
    <!---->
    <div class="ant-cascader-menu-item-content">West Lake</div>
    <!---->
    <!---->
  </li>
</ul>
`;

exports[`Cascader can be selected 3`] = `
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Zhejiang" aria-checked="true" data-path-key="zhejiang">
    <!---->
    <div class="ant-cascader-menu-item-content">Zhejiang</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Jiangsu" aria-checked="false" data-path-key="jiangsu">
    <!---->
    <div class="ant-cascader-menu-item-content">Jiangsu</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Hangzhou" aria-checked="true" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou">
    <!---->
    <div class="ant-cascader-menu-item-content">Hangzhou</div>
    <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
    <!---->
  </li>
</ul>
<ul class="ant-cascader-menu" role="menu">
  <li class="ant-cascader-menu-item ant-cascader-menu-item-active" role="menuitemcheckbox" title="West Lake" aria-checked="true" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu">
    <!---->
    <div class="ant-cascader-menu-item-content">West Lake</div>
    <!---->
    <!---->
  </li>
</ul>
`;

exports[`Cascader popup correctly when panel is open 1`] = `
<div>
  <div class="ant-cascader-menus">
    <ul class="ant-cascader-menu" role="menu">
      <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Zhejiang" aria-checked="false" data-path-key="zhejiang">
        <!---->
        <div class="ant-cascader-menu-item-content">Zhejiang</div>
        <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
        <!---->
      </li>
      <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Jiangsu" aria-checked="false" data-path-key="jiangsu">
        <!---->
        <div class="ant-cascader-menu-item-content">Jiangsu</div>
        <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div>
  <div class="ant-cascader-menus">
    <ul class="ant-cascader-menu" role="menu">
      <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Zhejiang" aria-checked="true" data-path-key="zhejiang">
        <!---->
        <div class="ant-cascader-menu-item-content">Zhejiang</div>
        <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
        <!---->
      </li>
      <li class="ant-cascader-menu-item ant-cascader-menu-item-expand" role="menuitemcheckbox" title="Jiangsu" aria-checked="false" data-path-key="jiangsu">
        <!---->
        <div class="ant-cascader-menu-item-content">Jiangsu</div>
        <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
        <!---->
      </li>
    </ul>
    <ul class="ant-cascader-menu" role="menu">
      <li class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active" role="menuitemcheckbox" title="Hangzhou" aria-checked="true" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou">
        <!---->
        <div class="ant-cascader-menu-item-content">Hangzhou</div>
        <div class="ant-cascader-menu-item-expand-icon"><span role="img" aria-label="right" class="anticon anticon-right"><svg focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></div>
        <!---->
      </li>
    </ul>
    <ul class="ant-cascader-menu" role="menu">
      <li class="ant-cascader-menu-item" role="menuitemcheckbox" title="West Lake" aria-checked="true" data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu">
        <!---->
        <div class="ant-cascader-menu-item-content">West Lake</div>
        <!---->
        <!---->
      </li>
    </ul>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow">
  <!---->
  <!---->
  <div class="ant-select-selector"><span class="ant-select-selection-search"><input id="rc_select_TEST_OR_SSR" autocomplete="off" class="ant-select-selection-search-input" style="opacity: 0;" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" readonly="" unselectable="on" type="search"></span><span class="ant-select-selection-item" title="Zhejiang">Zhejiang</span>
    <!---->
  </div><span class="ant-select-arrow" style="user-select: none;" unselectable="on" aria-hidden="true"><span role="img" aria-label="down" class="anticon anticon-down ant-select-suffix"><svg focusable="false" class="" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></span></span><span class="ant-select-clear" style="user-select: none;" unselectable="on" aria-hidden="true"><span role="img" aria-label="close-circle" class="anticon anticon-close-circle"><svg focusable="false" class="" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"></path></svg></span></span>
</div>
`;
